Add library authentification abilities and session management.  - creation of a session manager that can save the secrets of user to avoid repetitive login;  - the validity of libraries is checked wherever a user tries to open an editor that uses library indices or run calculation;  - addition of process filling in the graph factory.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -470,7 +470,14 @@ LciaCategoryDescriptionTable=LCIA category description table
 LciaResultTable=LCIA result table
 LibgfortanInfo=openLCA uses a native library for improved calculation performance. It requires the package libgfortran3 to be installed on Linux which seems to be not the case on your system. We recommend to install this package if you want to use the improved calculation features of openLCA. If you are running an Ubuntu system try installing the package with 'apt-get install libgfortran3'
 Library=Library
+LicenseCorrupted=The library is corrupted (some files have been modified or deleted)
+LicenseExpired=The library license is expired.
 LicenseInformation=License information
+LicenseNotYetValid=The library license is not yet valid.
+LicenseUntrusted=The library license is not issued by a trusted certificate authority.
+LicenseValid=The library license is valid.
+LicenseWrongPassword=The provided password is wrong.
+LicenseWrongUser=The provided user is wrong.
 Line=Line
 LinkingProperties=Linking properties
 LoadingRepositoryList=Loading repository list
