Use _Username or email_ label instead of _User_ when authenticating a library.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -41,6 +41,7 @@ ArithmeticMean=Arithmetic mean
 AsDefinedInProcesses=As defined in processes
 AssessDataQuality=Assess data quality
 AssignUnits=Assign units
+Authentication=Authentication
 AutoLinkProcesses=Auto-link processes
 AvoidedProduct=Avoided product
 AvoidedProductFlow=Avoided product flow
@@ -261,6 +262,7 @@ EditMode=Edit mode
 EditStickyNote=Edit sticky note
 ElementaryFlow=Elementary flow
 Email=Email
+EmailOrUsername=Username or email
 EmptyDatabase=Empty database
 EmptyValueMessage=The given value is empty.
 EnableCollaboration=Enable collaboration
@@ -648,6 +650,7 @@ PleaseEnterAName=Please enter a name
 PleaseEnterANewName=Please enter a new name
 PleaseEnterTheNameOfTheNewCategory=Please enter the name of the new category\:
 PleaseEnterYourAuthenticatorTokenToProceed=Please enter your authenticator token to proceed
+PleaseEnterYourCredentialsLibrary=Please enter your credentials to open the library.
 PleaseSelectElements=Please select the elements, that you want to import. Required references will be loaded as well, if not selected.
 PleaseSelectProperties=Please select the properties for the data quality assessment
 PleaseSpecifyCompleteUrl=Please specify the complete url of the repository you want to import from. If the repository is not publicly accessible you need to enter your credentials to connect.
