Add an overlay to the licensed library depending on the validity of the dates.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -573,7 +573,7 @@ NoDatabaseOpened=No database is opened
 NoDescription=No description
 NoDistribution=No distribution
 NoExportFilesSelected=No export files selected
-NoLicenseDetected=No license detected
+NoLicenseDetected=No license detected.
 NoOpportunity=No opportunity
 NoParameterSelected=No parameter selected
 NoProjectVaraintsAreDefined=No project variants are defined
