--- a/olca-app/OSGI-INF/l10n/bundle_zh_tw.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_zh_tw.properties
@@ -1,42 +1,42 @@
-ActorEditor=\u53c2\u4e0e\u8005\u7f16\u8f91
-Actors=\u53c2\u4e0e\u8005
-Comments=\u8bc4\u8bba
-Configuration=\u8bbe\u7f6e
-DataProvider=\u6570\u636e\u63d0\u4f9b\u8005
+ActorEditor=\u53c3\u8207\u8005\u7de8\u8f2f
+Actors=\u53c3\u8207\u8005
+Configuration=\u914d\u7f6e
+DataProvider=\u8cc7\u6599\u63d0\u4f9b\u8005
 EcoSpold=EcoSpold 1
-ElementaryFlows=\u57fa\u7840\u6d41
-EmptyCategories=\u7a7a\u7c7b\u522b
-FlowEditor=\u6d41\u7f16\u8f91
-FlowProperties=\u6d41\u5c5e\u6027
-FlowPropertyEditor=\u6d41\u5c5e\u6027\u7f16\u8f91
-Flows=\u6d41
-GlobalParameters=\u5168\u5c40\u53c2\u6570
-ILCDNetworkExport=\u4ece ILCD \u7f51\u7edc\u5bfc\u51fa
-ILCDNetworkImport=\u4ece ILCD \u7f51\u7edc\u5bfc\u5165
-ImpactMethodEditor=\u5f71\u54cd\u8bc4\u4f30\u65b9\u6cd5\u7f16\u8f91
-ImpactMethods=\u5f71\u54cd\u8bc4\u4f30\u65b9\u6cd5
-ImportEntireDatabase=\u5bfc\u5165\u6574\u4e2a\u6570\u636e\u5e93
-ImportEntireDatabase_Info=\u5c06\u4e00\u4e2a\u5b8c\u6574\u7684\u6570\u636e\u5e93\u5bfc\u5165\u5230\u6d3b\u52a8\u6570\u636e\u5e93\u4e2d\u3002
-ImportExport=\u5bfc\u51fa/\u5bfc\u5165
+ElementaryFlows=\u5143\u7d20\u6d41\u7a0b
+EmptyCategories=\u7a7a\u985e\u5225
+FlowEditor=\u6d41\u7a0b\u7de8\u8f2f
+FlowProperties=\u6d41\u7a0b\u7279\u6027
+FlowPropertyEditor=\u6d41\u7a0b\u7279\u6027\u7de8\u8f2f
+Flows=\u6d41\u7a0b
+GlobalParameters=\u5168\u57df\u53c3\u6578
+ILCDNetworkExport=\u5f9eILCD\u7db2\u8def\u532f\u51fa
+ILCDNetworkImport=\u5f9eILCD\u7db2\u8def\u532f\u5165
+ImpactMethodEditor=\u5f71\u97ff\u8a55\u4f30\u65b9\u6cd5\u7de8\u8f2f
+ImpactMethods=\u5f71\u97ff\u8a55\u4f30\u65b9\u6cd5
+ImportExport=\u532f\u51fa/\u532f\u5165
 LCIAMethods=LCIA\u65b9\u6cd5
 Locations=\u4f4d\u7f6e
-Logging=\u8bb0\u5f55
-Navigation=\u5bfc\u822a
-NumberFormat=\u6570\u5b57\u683c\u5f0f
-Perspective=\u900f\u89c6
-ProcessEditor=\u8fc7\u7a0b\u7f16\u8f91
-Processes=\u8fc7\u7a0b
-ProductFlows=\u4ea7\u54c1\u6d41
-ProductSystemEditor=\u4ea7\u54c1\u7f16\u8f91
-ProductSystems=\u4ea7\u54c1\u6a21\u578b
-ProjectEditor=\u9879\u76ee\u7f16\u8f91
-ReportViewer=\u62a5\u544a\u6d4f\u89c8\u8005
-SearchResults=\u641c\u7d22\u7ed3\u679c
-SourceEditor=\u6765\u6e90\u7f16\u8f91
-Sources=\u6765\u6e90
-UnitGroupEditor=\u5355\u4f4d\u7ec4\u7f16\u8f91
-UnitGroups=\u5355\u4f4d\u7ec4
+Logging=\u8a18\u9304
+Navigation=\u5c0e\u89bd
+NumberFormat=\u6578\u5b57\u683c\u5f0f
+Perspective=\u900f\u8996
+ProcessEditor=\u5de5\u5e8f\u7de8\u8f2f
+Processes=\u5de5\u5e8f
+ProductFlows=\u751f\u7522\u6d41\u7a0b
+ProductSystemEditor=\u751f\u7522\u7cfb\u7d71\u7de8\u8f2f
+ProductSystems=\u751f\u7522\u7cfb\u7d71
+ProjectEditor=\u5c08\u6848\u7de8\u8f2f
+ReportViewer=\u5831\u544a\u95b1\u89bd\u8005
+SourceEditor=\u4f86\u6e90\u7de8\u8f2f
+Sources=\u4f86\u6e90
+UnitGroupEditor=\u55ae\u4f4d\u7fa4\u7d44\u7de8\u8f2f
+UnitGroups=\u55ae\u4f4d\u7fa4\u7d44
 Updates=\u66f4\u65b0
 Usage=\u7528\u6cd5
-WasteFlows=\u5e9f\u7269\u6d41
-Welcome=\u6b22\u8fce
+WasteFlows=\u5ee2\u7269\u6d41\u7a0b
+Welcome=\u6b61\u8fce
+Comments=\u8a55\u8ad6
+ImportEntireDatabase=\u5c0e\u5165\u6574\u500b\u8cc7\u6599\u5eab
+ImportEntireDatabase_Info=\u5c07\u6574\u500b\u8cc7\u6599\u5eab\u532f\u5165\u6d3b\u52d5\u8cc7\u6599\u5eab
+SearchResults=\u641c\u5c0b\u7d50\u679c
