allow normal file names when copying a database
this needs to be tested on Windows too, as there are
more restrictions on file names there....

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -548,7 +548,7 @@ NewCurrency=New currency
 NewDataQualitySystem=New data quality system
 NewDatabase=New database
 NewDatabase_AlreadyExists=A database with this name already exists
-NewDatabase_InvalidName=The name is not a valid identifier (characters, numbers, and underscores are allowed)
+NewDatabase_InvalidName=The database name contains invalid characters
 NewDatabase_NameToShort=The database name must have at least 4 characters
 NewFlow=New flow
 NewFlowProperty=New flow property
