Rename Impact Analysis to Direct Impact in the Process editor.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 11:52:19 CET 2023
+#Tue Feb 06 15:28:11 CET 2024
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -243,6 +243,7 @@ Direct=Direct
 DirectContribution=Direct contribution
 DirectContributionsFlowResultsOverview=Top 5 contributions to flow results - overview
 DirectContributionsImpactCategoryResultsOverview=Top 5 contributions to impact category results - overview
+DirectImpacts=Direct impacts
 Direction=Direction
 Disabled=Disabled
 Disconnect=Disconnect
