--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 11:52:19 CET 2023
+#Tue Feb 06 15:28:11 CET 2024
 ALocationCodeIsRequired=Ein Ortscode wird ben\u00F6tigt
 AboutOpenLCA=\u00DCber openLCA
 AccessAndUseRestrictions=Zugangs- und Nutzungsbeschr\u00E4nkungen
@@ -212,6 +212,7 @@ Direct=Direkt
 DirectContribution=Direkter Beitrag
 DirectContributionsFlowResultsOverview=Direkte Beitr\u00E4ge zu Flussergebnissen - \u00DCberblick
 DirectContributionsImpactCategoryResultsOverview=Direkte Beitr\u00E4ge zu Wirkungskategorieergebnissen - \u00DCberblick
+DirectImpacts=Direkte Wirkungen
 Direction=Richtung
 DisconnectFromRepository=Verbindung zum Datenspeicher trennen
 Display=Anzeigen
