--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 11:52:19 CET 2023
+#Tue Feb 06 15:28:11 CET 2024
 ALocationCodeIsRequired=Es necesario un c\u00F3digo de ubicaci\u00F3n
 AccessAndUseRestrictions=Restricciones de acceso y uso
 ActivityQuantity=Propiedad de la actividad
@@ -209,6 +209,7 @@ Direct=Directos
 DirectContribution=Contribuci\u00F3n directa
 DirectContributionsFlowResultsOverview=Contribuciones directas a los resultados de flujo - resumen
 DirectContributionsImpactCategoryResultsOverview=Contribuciones directas a los resultados de categor\u00EDas de impacto - resumen
+DirectImpacts=Impactos directos
 Direction=Direcci\u00F3n
 DisconnectFromRepository=Desconectar del repositorio
 Display=Visualizaci\u00F3n
