--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 11:52:19 CET 2023
+#Tue Feb 06 15:28:11 CET 2024
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -212,6 +212,7 @@ Direct=direct
 DirectContribution=Contribution directe
 DirectContributionsFlowResultsOverview=Contribution directe des r\u00E9sultats de flux - aper\u00E7u
 DirectContributionsImpactCategoryResultsOverview=Contribution directe \u00E0 l'impact des r\u00E9sultats par cat\u00E9gorie - aper\u00E7u
+DirectImpacts=Impacts directs
 Direction=Direction
 DisconnectFromRepository=D\u00E9connexion du d\u00E9p\u00F4t
 Display=Affichage
