--- a/olca-app/src/org/openlca/app/messages_hu.properties
+++ b/olca-app/src/org/openlca/app/messages_hu.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 11:52:19 CET 2023
+#Tue Feb 06 15:28:11 CET 2024
 ALocationCodeIsRequired=Geok\u00F3d megad\u00E1sa k\u00F6telez\u0151
 AccessAndUseRestrictions=Hozz\u00E1f\u00E9r\u00E9si \u00E9s felhaszn\u00E1l\u00E1si megk\u00F6t\u00E9sek
 ActivityQuantity=Tev\u00E9kenys\u00E9g mennyis\u00E9g
@@ -209,6 +209,7 @@ Direct=K\u00F6zvetlen
 DirectContribution=K\u00F6zvetlen hozz\u00E1j\u00E1rul\u00E1s
 DirectContributionsFlowResultsOverview=K\u00F6zvetlen hozz\u00E1j\u00E1rul\u00E1sok az \u00E1ramok szerinti eredm\u00E9nyekhez - \u00E1ttekint\u00E9s
 DirectContributionsImpactCategoryResultsOverview=K\u00F6zvetlen hozz\u00E1j\u00E1rul\u00E1sok a hat\u00E1skateg\u00F3ria eredm\u00E9nyekhez - \u00E1ttekint\u00E9s
+DirectImpacts=K\u00F6zvetlen hat\u00E1sok
 Direction=Ir\u00E1ny
 DisconnectFromRepository=T\u00E1rhely lev\u00E1laszt\u00E1sa
 Display=Megjelen\u00EDt\u00E9s
