--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 11:52:19 CET 2023
+#Tue Feb 06 15:28:11 CET 2024
 ALocationCodeIsRequired=Occorre indicare un codice di localit\u00E0
 AccessAndUseRestrictions=Restrizioni di accesso e uso
 ActivityQuantity=Attivit\u00E0 - Quantit\u00E0
@@ -202,6 +202,7 @@ Direct=Diretto
 DirectContribution=Contributo diretto
 DirectContributionsFlowResultsOverview=Contributi diretti ai risultati del flusso - Riepilogo
 DirectContributionsImpactCategoryResultsOverview=Contributi diretti ai risultati della categoria di impatto - Riepilogo
+DirectImpacts=Impatti diretti
 Direction=Direzione
 DisconnectFromRepository=Disconnetti dalla repository
 Display=Visualizza
