--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 11:52:19 CET 2023
+#Tue Feb 06 15:28:11 CET 2024
 ALocationCodeIsRequired=C\u00F3digo da localiza\u00E7\u00E3o necess\u00E1rioUm err
 AccessAndUseRestrictions=Acesso e uso de restri\u00E7\u00F5es
 ActivityQuantity=Soma da atividade
@@ -209,6 +209,7 @@ Direct=Direto
 DirectContribution=Contribui\u00E7\u00E3o direta
 DirectContributionsFlowResultsOverview=Contribui\u00E7\u00F5es diretas para os resultados de fluxo - vis\u00E3o geral
 DirectContributionsImpactCategoryResultsOverview=Contribui\u00E7\u00F5es diretas\u00A0para resultados de categoria\u00A0de impacto - vis\u00E3o geral
+DirectImpacts=Impactos diretos
 Direction=Direcionamento
 DisconnectFromRepository=Desconectar do reposit\u00F3rio
 Display=Exibi\u00E7\u00E3o
