--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 11:52:19 CET 2023
+#Tue Feb 06 15:28:11 CET 2024
 AccessAndUseRestrictions=Eri\u015Fim ve kullan\u0131m k\u0131s\u0131tlamalar\u0131
 ActivityQuantity=Faaliyet miktar\u0131
 ActivityUnit=Faaliyet birimi
@@ -180,6 +180,7 @@ Direct=Do\u011Frudan
 DirectContribution=Do\u011Frudan katk\u0131
 DirectContributionsFlowResultsOverview=Ak\u0131\u015F sonu\u00E7lar\u0131na do\u011Frudan katk\u0131 - genel bak\u0131\u015F
 DirectContributionsImpactCategoryResultsOverview=Etki kategori sonu\u00E7lar\u0131na do\u011Frudan katk\u0131 - genel bak\u0131\u015F
+DirectImpacts=Do\u011Frudan etkiler
 Direction=Y\u00F6n
 DisconnectFromRepository=Havuzla ba\u011Flant\u0131y\u0131 kes
 Display=G\u00F6r\u00FCn\u00FCm
