--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 11:52:19 CET 2023
+#Tue Feb 06 15:28:11 CET 2024
 ALocationCodeIsRequired=Cal un codi d'assignaci\u00F3
 AccessAndUseRestrictions=Restriccions d'acc\u00E9s i d'\u00FAs
 ActivityQuantity=Propietat de l'activitat
@@ -197,6 +197,7 @@ Direct=Directes
 DirectContribution=Contribuci\u00F3 directa
 DirectContributionsFlowResultsOverview=Contribucions directes als resultats de fulx - resum
 DirectContributionsImpactCategoryResultsOverview=Contribucions directes als resultats de categories d'impacte - resum
+DirectImpacts=Impactes directes
 Direction=Direcci\u00F3
 DisconnectFromRepository=Desconnectar del repositori
 Display=Visualitzaci\u00F3
