Externalize and improve String concatenation for UI.header.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:51:16 CET 2024
+#Wed May 22 10:56:34 CET 2024
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -18,6 +18,7 @@ AddSection=Add section
 AddStickyNote=Add sticky note
 AddedValue=Added value
 AdditionalInformation=Additional information
+AdditionalProperties=Additional properties
 Address=Address
 AdministrativeInformation=Administrative information
 Aggregation=Aggregation
@@ -32,6 +33,7 @@ ApplyFormat=Apply formatting
 AsDefinedInProcesses=As defined in processes
 AssessDataQuality=Assess data quality
 AssignUnits=Assign units
+Authenticate=Authenticate
 Authentication=Authentication
 AutoLinkProcesses=Auto-link processes
 AvoidedProduct=Avoided product
@@ -64,6 +66,7 @@ CannotDeleteReferenceFlowProperty=Cannot delete reference flow property
 CannotDeleteReferenceUnit=Cannot delete reference unit
 CannotDeleteUnit=Cannot delete unit
 CannotRemoveExchanges=Cannot remove exchanges
+Categories=Categories
 Category=Category
 CategoryNotEmpty=The category is not empty.
 Causal=Causal
@@ -97,6 +100,7 @@ CompressingDatabase=Compressing database...
 Configuration=Configuration
 ConfigureEcospoldMessage=On this page you can configure the exported EcoSpold format
 Connect=Connect
+ConnectGitRepo=Connect Git repository
 ConnectProviders=Connect providers
 ConnectRecipients=Connect recipients
 Connection=Connection
@@ -204,6 +208,7 @@ Disconnect=Disconnect
 Display=Display
 DoNotShowThisMessageAgain=Do not show this message again
 DoYouReallyWantToDelete=Do you really want to delete {0}
+Documentation=Documentation
 DontShowSmallerThen=Don\u2018t show <
 DownloadingData=Downloading data...
 East=East
@@ -221,6 +226,8 @@ EmptyDatabase=Empty database
 EmptyValueMessage=The given value is empty.
 EnableComments=Enable comments
 EndDate=End date
+EnterGitCredentials=Enter your credentials for the Git repository.
+EnterGitLocation=Enter the location of the Git repository.
 Error=Error
 EvaluateAllFormulas=Evaluate all formulas
 EvaluationSchema=Evaluation schema
@@ -255,6 +262,7 @@ Factor=Factor
 Factors=Factors
 FailedToLoadFlowProperty=Failed to load flow property
 Fetch=Fetch
+FetchedCommits=Fetched commits
 File=&File
 FileAlreadyExists=File already exists
 FileDoesNotExist=File does not exist
@@ -263,6 +271,8 @@ Filter=Filter
 Flow=Flow
 FlowContributionsToProcessResults=Flow contributions to process results
 FlowDataQualitySchema=Flow data quality schema
+FlowMapping=Flow mapping
+FlowNotCovered=Flows that are not covered by the selected LCIA method
 FlowProperties=Flow properties
 FlowProperty=Flow property
 FlowPropertyIsUsed=The given flow property is used in processes or impact methods.
@@ -323,6 +333,7 @@ ImpactResults=Impact results
 Import=Import...
 ImportData=Import data
 ImportDatabase=Import database
+ImportDetails=Import details
 ImportEcoSpold02DataSets=Import EcoSpold 02 data sets
 ImportEcoSpold=Import EcoSpold
 ImportILCD=Import ILCD
@@ -385,6 +396,7 @@ LicenseWrongPassword=The provided password is wrong.
 LicenseWrongUser=The provided user is wrong.
 LinkingProperties=Linking properties
 LocalDatabase=Local database
+LocateLibrary=Locate library
 Location=Location
 Locations=Locations
 LogFile=Log file
@@ -554,6 +566,8 @@ Providers=Providers
 Publication=Publication
 Pull=Pull
 Push=Push
+PushedCommits=Pushed commits
+Python=Python
 QuantitativeReference=Quantitative reference
 Quantity=Quantity
 RawValue=Raw value
@@ -566,6 +580,7 @@ ReferenceProcess=Reference process
 ReferenceUnit=Reference unit
 ReferenceUnitCannotBeDeleted=The reference unit of a unit group cannot be deleted.
 ReferenceUnitIsEmptyOrInvalid=Reference unit is empty or invalid
+RegionalizedCalculation=Regionalized calculation
 RegionalizedLCIA=Regionalized LCIA
 RelativeLciaResultsBarChart=Relative LCIA results - bar chart
 RelativeLciaResultsRadarChart=Relative LCIA results - radar chart
@@ -636,6 +651,7 @@ SelectObjectPage_Description=Please select the destination and the data sets for
 SelectPrevious=Select previous
 SelectProviders=Select providers
 SelectRecipients=Select recipients
+SelectSystemDatabases=Select system model databases
 SetAsQuantitativeReference=Set as quantitative reference
 SetAsReferenceCurrency=Set as reference currency?
 SetReferenceCurrencyQuestion=Do you want to set this currency as the reference currency of the database?
@@ -647,6 +663,7 @@ ShowFormulas=Show formulas
 ShowInHistory=Show in history
 ShowValues=Show values
 SimaProCSVImport=SimaPro CSV Import
+Similarities=Similarities
 SingleScore=Single score
 SingleScoreBarChart=Single score bar chart
 SingleScoreTable=Single score table
@@ -666,6 +683,9 @@ SourceFileDeleteQuestion=Do you really want to delete this file?
 SourceFileOverwriteFileQuestion=A file with the given name already exists in this database. Do you want to overwrite it?
 Sources=Sources
 South=South
+SpecifyLibraryLocation=Please specify a location for the missing library
+SpecifyMetadata=Specify database wide meta data (* -> multiple values can be separated by a comma ',')
+SqlQueryBrowser=SQL Query Browser
 StandardDeviation=Standard deviation
 StandardDeviationFormula=Standard deviation (formula)
 Start=Start
@@ -720,6 +740,7 @@ UnitProcess=Unit process
 Units=Units
 UnitsAndFlowProperties=Units and flow properties
 Unknown=Unknown
+UnknownQ=Unknown?
 UnsavedChanges=Unsaved changes
 Up=Up
 Update=Update
@@ -739,6 +760,7 @@ UsedInProcesses=Used in processes
 User=User
 Valid=Valid
 Validate=Validate
+ValidationResults=Validation results
 Value=Value
 Variant=Option
 VariantDescriptionTable=Product system description table
