Add missing translation.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:56:34 CET 2024
+#Wed May 22 14:55:17 CET 2024
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -193,6 +193,7 @@ Delete=Delete
 DeleteDatabase=Delete database
 DeleteFile=Delete file
 DeleteLocalDataset=Delete local dataset
+DeleteProcessLink=Delete process link
 DeleteReportSectionQuestion=Do you really want to delete this report section?
 DeleteSection=Delete section
 DependentParameter=Dependent parameter
@@ -311,6 +312,7 @@ ILCDNetworkExportDescription=Export processes or product systems to an ILCD netw
 ILCDNetworkSettings=ILCD Network settings
 ILCDOtherSettings=ILCD other settings
 ILCD_CONNECTION_FAILED_MSG=Connection failed. Please check your network connection, URL, and user data.
+ILCD_CONNECTION_WORKS_MSG=Connection works.
 ILCD_NO_READ_OR_WRITE_ACCESS_MSG=You do not have read or write access
 ILCD_NetworkImport=Network Import
 ILCD_RunImport=Run Import
@@ -662,6 +664,7 @@ ShowElementaryFlows=Show elementary flows
 ShowFormulas=Show formulas
 ShowInHistory=Show in history
 ShowValues=Show values
+ShowViews=Show &views
 SimaProCSVImport=SimaPro CSV Import
 Similarities=Similarities
 SingleScore=Single score
@@ -676,6 +679,7 @@ SocialDataQualitySchema=Social data quality schema
 SocialIndicator=Social indicator
 SocialIndicators=Social indicators
 SocialSchema=Social schema
+Soda4LcaClient=soda4LCA client
 SomeElementsAreNotSaved=Some elements referenced by the product system are not saved yet. The calculation will not take these into account. Do you want to save them now?
 SomeParametersWereNotAdded=Some parameters were not added because their names were either invalid or a parameter with the same name already existed.
 Source=Source
