--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:51:16 CET 2024
+#Wed May 22 14:55:17 CET 2024
 ALocationCodeIsRequired=Cal un codi d'assignaci\u00F3
 AccessAndUseRestrictions=Restriccions d'acc\u00E9s i d'\u00FAs
 ActivityQuantity=Propietat de l'activitat
@@ -491,6 +491,7 @@ Settings=Configuraci\u00F3
 SettingsOfTheSankeyDiagram=Configuraci\u00F3 pel diagrama de Sankey
 ShowFormulas=Mostrar f\u00F3rmules
 ShowValues=Mostrar valors
+ShowViews=Mostrar &vistes
 SimaProCSVImport=Importar SimaPro CSV
 SingleScore=Puntuaci\u00F3 \u00FAnica
 SingleScoreBarChart=Gr\u00E0fic de barres de resultat \u00FAnic
