--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:51:16 CET 2024
+#Wed May 22 14:55:17 CET 2024
 ALocationCodeIsRequired=Ein Ortscode wird ben\u00F6tigt
 AboutOpenLCA=\u00DCber openLCA
 AccessAndUseRestrictions=Zugangs- und Nutzungsbeschr\u00E4nkungen
@@ -553,6 +553,7 @@ SettingsOfTheSankeyDiagram=Einstellungen f\u00FCr das Sankey-Diagramm
 ShowFormulas=Formeln anzeigen
 ShowInHistory=In Historie anzeigen
 ShowValues=Werte anzeigen
+ShowViews=&Sichten anzeigen
 SimaProCSVImport=SimaPro CSV Import
 SingleScore=Single Score
 SingleScoreBarChart=Single-Score - Balkendiagramm
