--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:51:16 CET 2024
+#Wed May 22 14:55:17 CET 2024
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -555,6 +555,7 @@ ShowElementaryFlows=Montrer les flux \u00E9l\u00E9mentaires
 ShowFormulas=Afficher les formules
 ShowInHistory=Montrer l'historique
 ShowValues=Afficher les valeurs
+ShowViews=Afficher &views
 SimaProCSVImport=Import CSV SimaPro
 SingleScore=Score unique
 SingleScoreBarChart=Histogramme de score unique
