--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:51:16 CET 2024
+#Wed May 22 14:55:17 CET 2024
 ALocationCodeIsRequired=Occorre indicare un codice di localit\u00E0
 AccessAndUseRestrictions=Restrizioni di accesso e uso
 ActivityQuantity=Attivit\u00E0 - Quantit\u00E0
@@ -532,6 +532,7 @@ SettingsOfTheSankeyDiagram=Impostazioni diagramma Sankey
 ShowFormulas=Mostra le formule
 ShowInHistory=Mostra nella cronologia
 ShowValues=Mostra i valori
+ShowViews=Mostra le &viste
 SimaProCSVImport=Importa file CSV in formato SimaPro
 SingleScore=Punteggio singolo
 SingleScoreBarChart=Punteggio singolo - Grafico a barre
