--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:51:16 CET 2024
+#Wed May 22 14:55:17 CET 2024
 ALocationCodeIsRequired=C\u00F3digo da localiza\u00E7\u00E3o necess\u00E1rioUm err
 AccessAndUseRestrictions=Acesso e uso de restri\u00E7\u00F5es
 ActivityQuantity=Soma da atividade
@@ -544,6 +544,7 @@ SettingsOfTheSankeyDiagram=Defini\u00E7\u00F5es para o diagrama de Sankey
 ShowFormulas=Mostrar f\u00F3rmula
 ShowInHistory=Apresentar no hist\u00F3rico
 ShowValues=Mostrar valores
+ShowViews=Mostrar visualiza\u00E7\u00E3o
 SimaProCSVImport=Importar SimaPro CSV
 SingleScore=Pontua\u00E7\u00E3o individual
 SingleScoreBarChart=Pontua\u00E7\u00E3o individual\: gr\u00E1fico de barras\u00A0
