--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:51:16 CET 2024
+#Wed May 22 14:55:17 CET 2024
 AccessAndUseRestrictions=Eri\u015Fim ve kullan\u0131m k\u0131s\u0131tlamalar\u0131
 ActivityQuantity=Faaliyet miktar\u0131
 ActivityUnit=Faaliyet birimi
@@ -462,6 +462,7 @@ Settings=Ayarlar
 SettingsOfTheSankeyDiagram=Sankey diagram\u0131 ayarlar\u0131
 ShowFormulas=Form\u00FClleri g\u00F6ster
 ShowValues=De\u011Ferleri g\u00F6ster
+ShowViews=Show &views
 SimaProCSVImport=SimaPro CSV i\u00E7e aktar\u0131m\u0131
 SingleScore=Tek puan
 SingleScoreBarChart=Tek puan s\u00FCt\u00FCn grafi\u011Fi
