--- a/olca-app/src/org/openlca/app/messages_zh_cn.properties
+++ b/olca-app/src/org/openlca/app/messages_zh_cn.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:51:16 CET 2024
+#Wed May 22 14:55:17 CET 2024
 ALocationCodeIsRequired=\u4f4d\u7f6e\u7f16\u7801\u4e3a\u5fc5\u586b
 AboutOpenLCA=\u5173\u4e8e openLCA
 AccessAndUseRestrictions=\u8bbf\u95ee\u548c\u4f7f\u7528\u9650\u5236
@@ -645,6 +645,7 @@ ShowElementaryFlows=\u663e\u793a\u57fa\u672c\u6d41
 ShowFormulas=\u663e\u793a\u516c\u5f0f
 ShowInHistory=\u663e\u793a\u5386\u53f2
 ShowValues=\u663e\u793a\u6570\u503c
+ShowViews=\u663e\u793a\u89c6\u91ce(&V)
 SimaProCSVImport=\u5bfc\u5165SimaPro CSV\u683c\u5f0f
 SingleScore=\u5355\u4e00\u5206\u6570
 SingleScoreBarChart=\u5355\u4e00\u5206\u6570\u957f\u6761\u56fe
