--- a/olca-app/src/org/openlca/app/messages_zh_tw.properties
+++ b/olca-app/src/org/openlca/app/messages_zh_tw.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:51:16 CET 2024
+#Wed May 22 14:55:17 CET 2024
 ALocationCodeIsRequired=\u4f4d\u7f6e\u7de8\u78bc\u70ba\u5fc5\u586b
 AboutOpenLCA=\u95dc\u65bcopenLCA
 AccessAndUseRestrictions=\u5b58\u53d6\u548c\u4f7f\u7528\u9650\u5236
@@ -645,6 +645,7 @@ ShowElementaryFlows=\u986f\u793a\u5143\u7d20\u6d41
 ShowFormulas=\u986f\u793a\u516c\u5f0f
 ShowInHistory=\u986f\u793a\u6b77\u53f2\u8a18\u9304
 ShowValues=\u986f\u793a\u6578\u503c
+ShowViews=\u986f\u793a\u8996\u91ce(&V) ###
 SimaProCSVImport=\u532f\u5165SimaPro CSV\u683c\u5f0f
 SingleScore=\u55ae\u4e00\u5206\u6578
 SingleScoreBarChart=\u55ae\u4e00\u5206\u6578\u9577\u689d\u5716
