--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:51:16 CET 2024
+#Wed May 22 14:55:17 CET 2024
 ALocationCodeIsRequired=Es necesario un c\u00F3digo de ubicaci\u00F3n
 AccessAndUseRestrictions=Restricciones de acceso y uso
 ActivityQuantity=Propiedad de la actividad
@@ -546,6 +546,7 @@ SettingsOfTheSankeyDiagram=Configuraci\u00F3n para el diagrama de Sankey
 ShowFormulas=Mostrar f\u00F3rmulas
 ShowInHistory=Mostrar en el historial
 ShowValues=Mostrar valores
+ShowViews=Mostrar &vistes
 SimaProCSVImport=Importar SimaPro CSV
 SingleScore=Puntuaci\u00F3n \u00FAnica
 SingleScoreBarChart=Gr\u00E1fico de barras de resultado \u00FAnico
