--- a/olca-app/src/org/openlca/app/messages_hu.properties
+++ b/olca-app/src/org/openlca/app/messages_hu.properties
@@ -1,4 +1,4 @@
-#Wed May 22 10:51:16 CET 2024
+#Wed May 22 14:55:17 CET 2024
 ALocationCodeIsRequired=Geok\u00F3d megad\u00E1sa k\u00F6telez\u0151
 AccessAndUseRestrictions=Hozz\u00E1f\u00E9r\u00E9si \u00E9s felhaszn\u00E1l\u00E1si megk\u00F6t\u00E9sek
 ActivityQuantity=Tev\u00E9kenys\u00E9g mennyis\u00E9g
@@ -544,6 +544,7 @@ SettingsOfTheSankeyDiagram=A Sankey-diagram be\u00E1ll\u00EDt\u00E1sai
 ShowFormulas=K\u00E9plet megjelen\u00EDt\u00E9se
 ShowInHistory=Mutassa a t\u00F6rt\u00E9netben
 ShowValues=\u00C9rt\u00E9kek megjelen\u00EDt\u00E9se
+ShowViews=&n\u00E9zetek megjelen\u00EDt\u00E9se
 SimaProCSVImport=SimaPro CSV import\u00E1l\u00E1s
 SingleScore=Egyetlen mutat\u00F3
 SingleScoreBarChart=Egyetlen mutat\u00F3 - oszlopdiagram
